# cpp_project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_project.sh  new_cpp_project.sh
docs/: Doxyfile
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_example.cpp
